--- a/courses.html
+++ b/courses.html
@@ -31,7 +31,7 @@
 				</div>
 				<div>	
 					<p align="center">
-					<button id="youtube"><a src="https://www.youtube.com/@CA.Divyanshubanzal">Click here for more free content</a></button>
+					<button id="youtube"><a href="https://www.youtube.com/@CA.Divyanshubanzal">Click here for more free content</a></button>
 					</p>
                 </div>
             </div>
