--- a/courses.html
+++ b/courses.html
@@ -31,16 +31,19 @@
 				</div>
 				<div>	
 					<p align="center">
-					<button id="youtube"><a href="https://www.youtube.com/@CA.Divyanshubanzal">Click here for more free content</a></button>
+					<button id="youtube"><a href="https://www.youtube.com/@CA.Divyanshubanzal"><h1>Click for more Free Content</h1></a></button>
 					</p>
                 </div>
             </div>
             <div class="partition">
                 <h1 id="colorstrip">Paid Courses</h1>
 				</br>
-				 <iframe width="400" height="330" src="paid-course.html" frameborder="2" allowfullscreen>CMA Inter Audit Notes</iframe>
-                 <iframe width="400" height="330" src="Testseries.html" frameborder="2" allowfullscreen>Test Series</iframe>
+				 <iframe width="auto" height="300" src="paid-course.html" frameborder="10" >CMA Inter Audit Notes</iframe>
+                 <iframe width="auto" height="300" src="Testseries.html" frameborder="2" allowfullscreen>Test Series</iframe>
                 
+            </div>
+			<div class="partition">
+                <p>      .  </P>
             </div>
         </section>
     </main>
